<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blur"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grab_info"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us_infor"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="22dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_infor"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_infor"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skype_infor"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sales_infor"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="5dp"
            />

    </LinearLayout>

</LinearLayout>