<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/btn_white_tim">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_comment"
        android:gravity="center"
        android:textColor="@color/colorTim"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quality"
        android:layout_marginLeft="20dp"
        />
    <RatingBar
        android:id="@+id/ratingQuality"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:numStars="5"
        android:stepSize="1.0"
        android:layout_gravity="center"
        android:progressBackgroundTint="@color/colorTim"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service"
        android:layout_marginLeft="20dp"
        />
    <RatingBar
        android:id="@+id/ratingService"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:numStars="5"
        android:stepSize="1.0"
        android:layout_gravity="center"
        android:progressBackgroundTint="@color/colorTim"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_marginLeft="20dp"
        />
    <RatingBar
        android:id="@+id/ratingPrice"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:numStars="5"
        android:stepSize="1.0"
        android:layout_gravity="center"
        android:progressBackgroundTint="@color/colorTim"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin_5dp"
        />
    <EditText
        android:id="@+id/ed_comment"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:inputType="text"
        android:layout_marginTop="@dimen/margin_5dp"
        android:background="@drawable/border_radius_contact"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        />
    <EditText
        android:id="@+id/ed_nickname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:background="@drawable/border_radius_contact"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:hint="@string/nick_name"/>
    <EditText
        android:id="@+id/ed_emailaddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/border_radius_contact"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:hint="@string/email_addres"
        />
    <Button
        android:id="@+id/btnSend_AddComment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/btn_border_background_tim"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="10dp"
        android:text="@string/send"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:textColor="@color/colorWhite"/>

</LinearLayout>