<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tvCodeOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="#200000044"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        />
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvOrderDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_date"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvDetailOrderDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:text="02-11-2016 15-29-59"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvTotalMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_money"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvDetailTotalMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:text="1.000.000 VND"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvDetailStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:text="@string/status_processing"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvDetailShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:text="Bum Bum Shop"/>
    </LinearLayout>

</LinearLayout>