<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_blur"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contactus"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:background="@drawable/border_radius_contact"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/logo_company"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="2dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_company"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:layout_marginLeft="35dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        android:background="@drawable/border_radius_contact"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_address"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="2dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_company"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border_radius_contact"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_phone"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="2dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"

                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_phone"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:layout_marginLeft="50dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            >
            <Button
                android:id="@+id/btnCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_my_btn"
                android:text="@string/call"
                android:textColor="@android:color/white"

                />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:background="@drawable/border_radius_contact"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_email"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="2dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="EMAIL"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="info@grabcondom.com"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:layout_marginLeft="35dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            >
            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textColor="@android:color/white"
                android:background="@drawable/bg_my_btn"
                />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
